Adjusted headings. Resolved readability for institutions and companies per feedback from TL.

--- a/stylesheets/mainStylesheet.css
+++ b/stylesheets/mainStylesheet.css
@@ -163,11 +163,16 @@ section h3 {
 }
 
 section h4 {
-    font-size: 1rem;
+    font-size: 1.3rem;
     font-weight: lighter;
 }
 
 section h5 {
+    font-size: 1rem;
+    font-weight: lighter;
+}
+
+section h6 {
     font-size: 1.1rem;
     font-weight: lighter;
     text-align: center;
